# codebox

./: pyproject.toml
api/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_alter_visitor_team_size.py
backend/: settings.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.js
frontend/src/components/: FormConfirm.js  FormEmail.js  FormFirstName.js  FormLastName.js  FormSourceControl.js  FormSuccess.js  FormTeamSize.js  LandingPage.js  Welcome.js
