[tool.poetry]
name = "codebox"
version = "0.1.0"
description = "Codebox landing page to collect information from interested users"
authors = ["Corey Immke <cimmke@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.2"
djangorestframework = "^3.13.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
httpie = "^3.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
